--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,18 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'Roboto';
+    src: url('../fonts/Roboto-Regular.eot');
+    src: url('../fonts/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Roboto-Regular.woff2') format('woff2'),
+        url('../fonts/Roboto-Regular.woff') format('woff'),
+        url('../fonts/Roboto-Regular.svg#Roboto-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 /* Geral */
 
 *{
@@ -47,6 +59,14 @@ h5,
 h6{
 	font-family: 'Flexo', sans-serif;
 	font-weight: 600;
+}
+
+a.ver-todos{
+	display: block;
+	font: 18px 'Flexo', sans-serif;
+	font-weight: 600;
+	text-align: center;
+	width: 100%;
 }
 
 /* Header */
@@ -102,13 +122,28 @@ header{
 	width: 100%;
 }
 
-.acesse{
+.comunicados .acesse{
 	color: #001c90;
-	font-size: 14px;
+	font-family: 'Flexo', sans-serif;;
 	margin: 5px 0;
 }
 
+.comunicados .dropdown-toggle{
+	font: 16px 'Flexo', sans-serif;
+	font-weight: 600;
+}
+
+.comunicados .dropdown-item{
+	font-family: 'Flexo', sans-serif;
+	font-weight: 500;
+}
+
 /* Boletins */
+
+.boletins,
+.boletins a{
+	color: #055855;
+}
 
 .boletins h3 img{
 	max-height: 60px;
@@ -117,8 +152,34 @@ header{
 
 /* Youtube */
 
-.youtube{
+.youtube .programas{
+	padding-bottom: 20px;
+	padding-top: 20px;
+}
 
+.youtube a{
+	color: #000;
+}
+
+/* Especial Saúde */
+
+.especial-saude{
+	color: #3fbb00;
+	padding-bottom: 20px;
+	padding-top: 20px;
+}
+
+.especial-saude h2{
+	text-align: center;
+}
+
+.especial-saude h3{
+	font-size: 22px;
+	margin: 15px 0;
+}
+
+.especial-saude img{
+	max-width: 120px;
 }
 
 /* Footer */
