--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,14 @@ header{
 	border-color: rgba(255, 255, 255, 0);
 	color: rgba(255, 255, 255, 1);
 	box-shadow: none;
+	padding-left: 0;
+}
+
+/* Redes Sociais */
+
+.redes-sociais .icones{
+	max-height: 40px;
+	padding: 5px;
 }
 
 /* Usuários */
