--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,10 @@ header{
 
 /* Redes Sociais */
 
+.redes-sociais{
+	border-right: 1px solid #fff;
+}
+
 .redes-sociais .icones{
 	max-height: 40px;
 	padding: 5px;
