--- a/css/style.css
+++ b/css/style.css
@@ -190,17 +190,65 @@ header{
 /* Mega Menu */
 
 .mega-menu{
-	background: #fff;
+	background: rgba(0, 0, 0, .05);
+	padding: 15px;
+}
+
+.mega-menu .nav-tabs{
+	border: 0;
+}
+
+.mega-menu button{
+	border-bottom: 1px solid rgba(0, 0, 0, .1) !important;
+	border-radius: 0 !important;
+	color: #001c90;
+	font-size: 12px !important;
+	font-weight: 600;
+	text-align: center;
+}
+
+.mega-menu button.nav-link:hover{
+	color: #000;
+}
+
+.mega-menu button.nav-link.active{
+	background: #d6d6d6;
+	border-bottom: rgba(0, 0, 0, 1) !important;
+	color: #000;
+}
+
+.mega-menu ul{
+	padding: 0;
+}
+
+.mega-menu li{
+	list-style: none;
+}
+
+.mega-menu .menu-level-1 > li{
+	border-bottom: 1px solid rgba(0, 0, 0, .1);
+	font-size: 13px;
+	font-weight: 600;
+	margin: 15px 0;
+	padding-bottom: 10px;
+	text-transform: uppercase;
 }
 
 .mega-menu .menu-level-2 > li{
-	display: inline-flex;
+	font-weight: 400;
+	text-transform: none;
 }
 
-.mega-menu .nav-item{
+.mega-menu .menu-level-2 > li:before{
+	content: "-";
+	padding-right: 5px;
+}
+
+.mega-menu .nav-link{
 	align-items: center;
 	display: flex;
 	font-size: 13px;
+	justify-content: center;
 	text-transform: uppercase;
 }
 
