--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,7 @@ header{
 
 .mega-menu .menu-level-2 > li{
 	font-weight: 500;
+	padding-bottom: 5px;
 	padding-top: 5px;
 	text-transform: none;
 }
