--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ header{
 
 .menu-horizontal .navbar-light .navbar-toggler{
 	align-items: center;
-	border-color: #fff;
+	border-color: #001c90;
 	color:  #001c90;
 	justify-content: space-between;
 	text-transform: uppercase;
