--- a/css/style.css
+++ b/css/style.css
@@ -320,9 +320,7 @@ footer {
 	border-bottom: 1px solid rgba(0, 0, 0, .1);
 	font-size: 13px;
 	font-weight: bold;
-	margin: 15px 0;
-	padding-bottom: 10px;
-	text-transform: uppercase;
+	padding: 5px 0;
 	width: 100%;
 }
 
